k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: peakees-production
  labels:
    name: peakees-production
    environment: production
    app: peakees
